# Rose

./: .gitignore  .gitmodules  BUILD.md  LICENSE  LeagueUnlocked.spec  README.md  Rose.spec  SkinCloner.spec  __init__.py  build_all.py  build_exe.py  build_nuitka.py  build_pyinstaller.py  build_requirements.txt  config.py  constants.py  create_installer.py  ensure_cuda_pytorch.py  find_skin_name.py  historicmodebug.txt  installer.iss  learn_templates.py  main.py  mock_sidecar.py  requirements.txt  test_chroma_panel.py  test_count_max_chromas.py  test_download_garen_previews.py  test_p2p_full.py  test_pattern_matching_full.py  test_prebuilder.py  test_real_sidecar.py  test_script_uia.py  test_show_button.py  test_to_find_coords_skin_name.py  verify_spoof.py
LU-Pengu/: pengu_session.py
Pengu Loader/: config  datastore  version
database/: multilang_db.py  name_db.py
injection/: game_detector.py  injector.py  manager.py  overlay_manager.py  prebuilder.py
launcher/: launcher.py  updater.py
lcu/: client.py  lcu_connection.py  lcu_swiftplay.py  skin_scraper.py
main/: __init__.py
nodemaster/: Cargo.toml
nodemaster/src/: connection_limiter.rs  main.rs  protocol.rs  room.rs  server.rs
ocr/: backend.py  image_processing.py
pengu/: broadcaster.py  http_handler.py  message_handler.py  skin_mapping.py  skin_monitor.py  skin_processor.py
real_client_data/: right_nav_bar.html
sidecar/: Cargo.toml
sidecar/src/: main.rs  nodemaster_client.rs  protocol.rs  server.rs
state/: app_status.py  shared_state.py
threads/: __init__.py  champ_thread.py  champion_lock_handler.py  game_mode_detector.py  injection_trigger.py  lcu_monitor_thread.py  loadout_ticker.py  lobby_processor.py  ocr_thread.py  p2p_thread.py  phase_handler.py  phase_thread.py  skin_name_resolver.py  swiftplay_handler.py  (+5 more)
(+148 files in other folders)
