[package]
name = "sidecar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
futures = "0.3.31"
hex = "0.4.3"
iroh = "0.96"
iroh-gossip = "0.96.0"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2"
clap = { version = "4.4", features = ["derive"] }
time = { version = "0.3", features = ["macros", "formatting"] }

[profile.release]
strip = true       # Strip symbols from binary
opt-level = "z"    # Optimize for size
lto = true         # Link Time Optimization
codegen-units = 1  # Maximize optimization
panic = "abort"    # Remove panic unwinding code

